frontend/test/should_pass/basic_066.grg
using basic_model_002;

rule r {
	pattern {
		x : AC;
	}
	replace {
		eval {
			x.ia = 42;
			x.ic = 42;
		}
	}
}

