frontend/test/should_fail/inh_008.grg
using inh_model_008;

rule bla { 

	replace{} 
}
